src/style.css
:root {
    --font: "Poppins", serif;
    --primary-color: rgb(4, 10, 29);
    --secondary-color: rgba(207, 148, 236, 0.93);
    --border-color: rgb(149, 13, 218);
    --tertiary-color: rgba(174, 177, 184, 0.667);
    --custome-name: rgba(255, 255, 255, 0.8);
    --custome-projects: rgba(11, 18, 42, 0.852);
    --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
    --skill-color: rgba(140, 104, 151, 0.436);
}

.container-fluid .row {
    display: flex;
    align-items: center;
}

body {
    background-color: var(--primary-color) !important;
    color: var(--tertiary-color) !important;
    font-family: var(--font);
}

h1.custome-name {
    font-weight: bold;
    font-size: 3.5rem !important;
    margin-bottom: 0.3rem;
    line-height: 1.5;
    color: var(--custome-name)
}

@media (max-width:780px) {
    h1.custome-name {
        font-size: 2rem !important;
        line-height: 1.4;
        text-align: center;
    }

    h4 {
        font-size: 1.2rem !important;
    }
}

.name {
    padding-top: 75px;
}

@media (max-width:768px) {
    .name {
        padding-top: 5px;
    }
}

.job-title {
    font-size: 2rem;
    font-weight: bold;
    color: var(--secondary-color)
}

/* Custom Navbar Styles */
.custom-navbar {
    background-color: var(--primary-color);
}

.custom-navbar,
.navbar-nav,
.nav-link,
.navbar-brand {
    color: var(--tertiary-color) !important;
}

.custome-profile-container {
    margin-bottom: 30px;
    /* Space between image and text */
    text-align: center;
}

.custome-profile {
    border-radius: 50%;
    border: 7px solid var(--tertiary-color);
    width: 175px;
    height: 175px;
    object-fit: cover;
    /* Prevents distortion */
    padding: 8px;
    transition: all 0.3s ease;

    background:
        linear-gradient(var(--primary-color), var(--primary-color)) padding-box,
        linear-gradient(to right, var(--border-color) 50%, transparent 50%) border-box;

    background-size: 100% 50%;
    background-position: 100% 0;

    transition: background-position 2.8s ease-in-out 0.5s,
        transform 0.5s ease-in-out 0.2s;
}

@media(max-width:844px) {
    .custome-profile {
        border: 5px solid var(--tertiary-color);
    }
}

.custome-profile:hover {
    background:
        linear-gradient(var(--primary-color), var(--primary-color)) padding-box,
        linear-gradient(to right, transparent 50%, var(--border-color) 50%)border-box;

    transform: scale(1.02);
}

/*Fixed left*/
.profile-container {
    position: fixed;
    top: 70px;
    z-index: 1000;
    margin-top: 10px;
}

.menu-container {
    position: fixed;
    top: 280px;
}

/*Menu fixed position*/
@media(max-width: 768px) {

    .profile-container,
    .menu-container {
        position: relative;
        /* fixed positioning on smaller screen */
        left: auto;
        top: auto;
        text-align: center;
        /*Center content for better mobile experience*/
        margin-top: -44px;
    }

    .custome-profile {
        margin: 2px auto;
        display: block;
    }
}

@media (max-width:780px) {
    .menu {
        margin-bottom: 10px;
    }
}

/*smaller size on medium screen (max-width: 780px) */
@media (max-width:768px) {
    .custome-profile {
        max-width: 120px;
        height: 120px;
        margin-bottom: 10px;
    }
}

.custome-job-title {
    color: var(--secondary-color);
    font-weight: bold;
}

.col-md-12.custome-job-title {
    line-height: 2;
}

.custome-resume a,
.fa-solid {
    color: var(--tertiary-color);
    font-weight: bold;
    text-decoration: none;
}

.custome-resume a:hover {
    border-left: 3px solid var(--secondary-color);
    color: var(--secondary-color);
    cursor: pointer;
    padding-left: 10px;
    transition: all 0.3s ease-in-out;
}

.fa-solid {
    margin-left: 7px;
    font-size: 13px;
}

.fa-solid.project-icon {
    color: var(--custome-name);
}

@media (max-width:844px) {
    .fa-solid.project-icon {
        display: none;
    }
}

.fa-solid:hover {
    color: var(--secondary-color);
}

.custome-spacing {
    bottom: 20px
}

.custome-experience:hover {
    background-color: var(--custome-projects);
    border-radius: 8px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

/*navigation*/
ul {
    list-style-type: none;
    margin-right: 48px;
    margin-top: -13px;
}

/*description - section*/
.description {
    line-height: 1.8;
}

li a {
    color: var(--tertiary-color);
    text-decoration: none;
    font-size: 1rem;
}

ul li a:hover {
    cursor: pointer;
    color: var(--secondary-color);
    font-size: 1.1rem;
    transition: all 0.3s ease-in-out;
}

.custom-line {
    display: inline-block;
    width: 18px;
    height: 2px;
    background-color: var(--tertiary-color);
    margin-left: 10px;
    transition: all 0.3s ease-in-out;
    margin-right: 12px;
}

ul li a:hover .custom-line {
    cursor: pointer;
    background-color: var(--secondary-color);
    transform: scaleX(1.1);
    transition: all 0.3s ease-in-out;
    width: 45px;
}

@media (max-width:768px) {
    .d-flex {
        flex-direction: column;
        align-items: center;
    }

    .my-2 {
        margin-bottom: 16px;
    }
}

.project-description {
    margin-bottom: 35px;
}

.highlight {
    color: var(--custome-name);
}

.company {
    color: var(--custome-name);
    font-weight: bold;
}

.img-fluid {
    width: 100%;
    height: 350px;
    object-fit: cover;
}

.technical-skill {
    text-decoration: none;
    border: 1px solid var(--skill-color);
    border-radius: 50px;
    background-color: var(--skill-color);
    padding: 4px 8px;
    color: var(--secondary-color);
}

.project-detail {
    margin-left: 12px;
}

@media (max-width:768px) {
    .project-detail {
        margin-top: 20px;
    }

    .cover {
        margin-top: -30px;
    }
}

.project {
    color: var(--custome-name);
    font-size: 1.1rem;
    font-weight: bold;
    text-decoration: none;
}

.project:hover {
    cursor: pointer;
    color: var(--secondary-color);
    transition: all 0.3s ease-in-out;
}

.custome-projects:hover {
    background-color: var(--custome-projects);
    border-radius: 8px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

.footer-name {
    text-decoration: none;
    color: var(--custome-name)
}

.footer-name:hover {
    cursor: pointer;
    color: var(--secondary-color);
    text-decoration: underline;
}

